# LeadFlow

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/services/: routing.py
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: agents.py  dashboard.py  leads.py
backend/app/db/: base.py  session.py
backend/app/models/: agent.py  audit.py  lead.py  user.py
backend/app/schemas/: lead.py
backend/app/services/: assignment_service.py  deduplication.py  sla.py  weighted_round_robin.py
backend/tests/: conftest.py
backend/tests/unit/: test_models.py
context/: 01-product.md  02-business-rules.md  03-architecture.md  04-database.md  05-api-contracts.md  06-workflows.md  07-frontend-system.md  08-engineering-rules.md  09-security-and-operations.md  10-decisions.md  11-demo-scenarios.md  AGENTS.md
docker/: docker-compose.yml
docs/: detailed_report.md  project_info.txt
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/components/: Sidebar.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/lead/[id]/: page.tsx
frontend/src/app/leads/: page.tsx
scripts/: run_scenarios.py  seed_db.py
